// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen appPrototypes config import-export] should create the appPrototypes: the appPrototypes have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ appprototype [cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen appPrototypes config import-export] should skip the same appPrototypes: the appPrototypes have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= appprototype [cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen appPrototypes config import-export] should throw exception when new appPrototypes to import miss mandatory properties appPrototypes: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - appprototype [cfgObjectTest]:
    - type
    - version
",
  "stdout": "",
}
`;

exports[`[mutagen appPrototypes config import-export] should update the modified appPrototypes: the modified appPrototypes have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ appprototype [cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;
